--- a/src/components/NewGameButton/style.scss
+++ b/src/components/NewGameButton/style.scss
@@ -1,4 +1,5 @@
 @use "../../global.scss";
+@use "sass:color";
 
 .newGameButton {
    font-size: 20px;
@@ -7,15 +8,26 @@
    border-radius: 10px;
    cursor: pointer;
 
+   transition: 0.3s;
+
    animation: show  0.2s ease-in-out running;
 
    &.x {
-      background-color: global.$xColor
+      background-color: global.$xColor;
+      &:hover {
+         background-color:  color.adjust(global.$xColor, $lightness: 10%)
+      }
    }
    &.o {
-      background-color: global.$oColor
+      background-color: global.$oColor;
+      &:hover {
+         background-color:  color.adjust(global.$oColor, $lightness: 10%)
+      }
    }
    &.none {
-      background-color: white;
+      background-color: global.$whiteColor;
+      &:hover {
+         background-color:  color.adjust(global.$whiteColor, $lightness: 10%)
+      }
    }
 }
