--- a/src/global.scss
+++ b/src/global.scss
@@ -4,7 +4,7 @@ $endGameLineStroke: 3px;
 $boardSize: $squareSize * 3;
 
 $backgroundColor: hsl(0, 0%, 5%);
-$whiteColor: hsl(0, 0%, 95%);
+$whiteColor: hsl(0, 0%, 90%);
 
 $xColor: hsl(0, 100%, 60%);
 $oColor: hsl(250, 100%, 60%);
@@ -15,5 +15,15 @@ $oColor: hsl(250, 100%, 60%);
    }  
    to { 
       opacity: 1;
+   }
+}
+
+@keyframes burn {
+   0% {
+      filter: saturate(100%) brightness(100%);
+   } 50% {
+      filter: saturate(160%) brightness(110%) hue-rotate(10deg);
+   } 100% { 
+      filter: saturate(100%) brightness(100%);
    }
 }
